# Boe_group_analytics

./: .env.local.example  .gitignore  README.md  __scratch-debug.ts  package-lock.json  package.json  start-demo.bat
.claude/: launch.json
app/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
backend/: .env.example  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
backend/finclone/: __init__.py  config.py  db.py  models.py  scout.py  scout_cache.py
backend/finclone/api/: auth.py  billing.py  main.py  portal.py
backend/finclone/edgar/: client.py  documents.py
backend/finclone/pipeline/: archive.py  bulk_ingest.py  crossref.py  ingest.py  kpi_extract.py  kpi_sweep.py  monitor.py  normalize.py  rebuild_companies.py  recover_tables.py  relink_sources.py  simfin_bulk.py  stats.py
backend/finclone/sheets/: datasheet.py  templates.py
backend/finclone/taxonomy/: gics_blueprint.py  kpi_definitions.py  sic_map.py
backend/tests/: test_crossref.py  test_datasheet.py  test_fiscal_label.py  test_kpi_extract.py  test_monitor.py  test_normalize.py  test_portal.py  test_scout.py  test_simfin_bulk.py  test_templates.py
components/: ApiKeyManager.tsx  DataSheetBuilder.tsx  FinancialsExplorer.tsx  ScoutSearch.tsx  TemplateBuilder.tsx
excel-addin/: README.md  manifest.xml  package-lock.json  package.json
excel-addin/src/: functions.html  functions.js  (+3 more)
lib/: apiAuth.ts  excel.ts  financials.ts  industryKpis.ts  scout.ts  simfin.ts  supabase.ts
supabase/: restore-2026-07-07.sql  schema.sql
web/: package-lock.json  package.json
(+39 files in other folders)
